@@ -67,6 +67,7 @@ func (x Algorithm) String() string {
 }
 func (Algorithm) EnumDescriptor() ([]byte, []int) { return fileDescriptor0, []int{0} }
 
+// A set of int32 flags used to control the behavior of a rate limit in gubernator
 type Behavior int32
 
 const (
@@ -110,28 +111,35 @@ const (
 	//
 	// Examples when using `Behavior = DURATION_IS_GREGORIAN`
 	//
-	// If  `Duration = 2` (Days) then the rate limit will reset to `Current = 0` at the end of the
-	// current day the rate limit was created.
+	// If  `Duration = 2` (Days) then the rate limit will expire at the end of the current day the
+	// rate limit was created.
 	//
-	// If `Duration = 0` (Minutes) then the rate limit will reset to `Current = 0` at the end of
-	// the minute the rate limit was created.
+	// If `Duration = 0` (Minutes) then the rate limit will expire at the end of the current minute
+	// the rate limit was created.
 	//
-	// If `Duration = 4` (Months) then the rate limit will reset to `Current = 0` at the end of
-	// the month the rate limit was created.
-	Behavior_DURATION_IS_GREGORIAN Behavior = 3
+	// If `Duration = 4` (Months) then the rate limit will expire at the end of the current month
+	// the rate limit was created.
+	Behavior_DURATION_IS_GREGORIAN Behavior = 4
+	// If this flag is set causes the rate limit to reset any accrued hits stored in the cache, and will
+	// ignore any `Hit` values provided in the current request. The effect this has is dependent on
+	// algorithm chosen. For instance, if used with `TOKEN_BUCKET` it will immediately expire the
+	// cache value. For `LEAKY_BUCKET` it sets the `Remaining` to `Limit`.
+	Behavior_RESET_REMAINING Behavior = 8
 )
 
 var Behavior_name = map[int32]string{
 	0: "BATCHING",
 	1: "NO_BATCHING",
 	2: "GLOBAL",
-	3: "DURATION_IS_GREGORIAN",
+	4: "DURATION_IS_GREGORIAN",
+	8: "RESET_REMAINING",
 }
 var Behavior_value = map[string]int32{
 	"BATCHING":              0,
 	"NO_BATCHING":           1,
 	"GLOBAL":                2,
-	"DURATION_IS_GREGORIAN": 3,
+	"DURATION_IS_GREGORIAN": 4,
+	"RESET_REMAINING":       8,
 }
 
 func (x Behavior) String() string {
@@ -212,7 +220,7 @@ type RateLimitReq struct {
 	// The algorithm used to calculate the rate limit. The algorithm may change on
 	// subsequent requests, when this occurs any previous rate limit hit counts are reset.
 	Algorithm Algorithm `protobuf:"varint,6,opt,name=algorithm,enum=pb.gubernator.Algorithm" json:"algorithm,omitempty"`
-	// The behavior of the rate limit in gubernator.
+	// Behavior is a set of int32 flags that control the behavior of the rate limit in gubernator
 	Behavior Behavior `protobuf:"varint,7,opt,name=behavior,enum=pb.gubernator.Behavior" json:"behavior,omitempty"`
 }
 
@@ -501,48 +509,49 @@ var _V1_serviceDesc = grpc.ServiceDesc{
 func init() { proto.RegisterFile("gubernator.proto", fileDescriptor0) }
 
 var fileDescriptor0 = []byte{
-	// 679 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x7c, 0x54, 0xcd, 0x6e, 0xda, 0x4c,
-	0x14, 0x8d, 0x21, 0x21, 0xf8, 0x26, 0x80, 0x33, 0xfa, 0x92, 0xf8, 0xa3, 0xa4, 0x45, 0x5e, 0x51,
-	0xa4, 0x82, 0x42, 0xa4, 0xb6, 0x4a, 0x57, 0x40, 0x28, 0x41, 0x10, 0xa8, 0x26, 0x24, 0x52, 0xbb,
-	0xb1, 0x86, 0xe4, 0x0a, 0xac, 0xe0, 0x1f, 0x3c, 0xe3, 0x48, 0xd9, 0x55, 0x7d, 0x85, 0xbe, 0x46,
-	0xdf, 0xa6, 0xeb, 0xee, 0xfa, 0x08, 0x7d, 0x80, 0xca, 0x03, 0x18, 0x8c, 0xd4, 0xec, 0xe6, 0x9e,
-	0x73, 0xee, 0x19, 0xe6, 0x1c, 0x61, 0xd0, 0xc6, 0xc1, 0x08, 0x7d, 0x87, 0x09, 0xd7, 0xaf, 0x78,
-	0xbe, 0x2b, 0x5c, 0x92, 0xf1, 0x46, 0x95, 0x15, 0x98, 0x2f, 0x8c, 0x5d, 0x77, 0x3c, 0xc5, 0x2a,
-	0xf3, 0xac, 0x2a, 0x73, 0x1c, 0x57, 0x30, 0x61, 0xb9, 0x0e, 0x9f, 0x8b, 0x8d, 0x2e, 0x68, 0x6d,
-	0x14, 0x94, 0x09, 0xec, 0x59, 0xb6, 0x25, 0x38, 0xc5, 0x19, 0x79, 0x07, 0x69, 0x1f, 0x67, 0x01,
-	0x72, 0xc1, 0x75, 0xa5, 0x98, 0x2c, 0xed, 0xd5, 0x5e, 0x54, 0x62, 0x9e, 0x95, 0x48, 0x4f, 0x71,
-	0x46, 0x23, 0xb1, 0x31, 0x80, 0x83, 0x0d, 0x33, 0xee, 0x91, 0x73, 0x50, 0x7d, 0xe4, 0x9e, 0xeb,
-	0x70, 0x5c, 0xda, 0x15, 0xfe, 0x6d, 0xc7, 0x3d, 0xba, 0x92, 0x1b, 0x7f, 0x14, 0xd8, 0x5f, 0xbf,
-	0x8b, 0x10, 0xd8, 0x76, 0x98, 0x8d, 0xba, 0x52, 0x54, 0x4a, 0x2a, 0x95, 0x67, 0x72, 0x02, 0x10,
-	0x38, 0xd6, 0x2c, 0x40, 0xf3, 0x01, 0x9f, 0xf4, 0x84, 0x64, 0xd4, 0x39, 0xd2, 0xc5, 0xa7, 0x70,
-	0x65, 0x62, 0x09, 0xae, 0x27, 0x8b, 0x4a, 0x29, 0x49, 0xe5, 0x99, 0xfc, 0x07, 0x3b, 0xd3, 0xd0,
-	0x52, 0xdf, 0x96, 0xe0, 0x7c, 0x20, 0x79, 0x48, 0xdf, 0x07, 0xbe, 0x8c, 0x47, 0xdf, 0x91, 0x44,
-	0x34, 0x93, 0xb7, 0xa0, 0xb2, 0xe9, 0xd8, 0xf5, 0x2d, 0x31, 0xb1, 0xf5, 0x54, 0x51, 0x29, 0x65,
-	0x6b, 0xfa, 0xc6, 0x2b, 0xea, 0x4b, 0x9e, 0xae, 0xa4, 0xe4, 0x0c, 0xd2, 0x23, 0x9c, 0xb0, 0x47,
-	0xcb, 0xf5, 0xf5, 0x5d, 0xb9, 0x76, 0xbc, 0xb1, 0xd6, 0x58, 0xd0, 0x34, 0x12, 0x1a, 0x3f, 0x12,
-	0x90, 0x89, 0x65, 0x42, 0xde, 0x40, 0x8a, 0x0b, 0x26, 0x02, 0x2e, 0x5f, 0x9e, 0xad, 0x1d, 0x6e,
-	0x98, 0x5c, 0x4b, 0x92, 0x2e, 0x44, 0xab, 0xf7, 0x25, 0xd6, 0xdf, 0x57, 0x08, 0x9b, 0xb0, 0x99,
-	0xe5, 0x58, 0xce, 0x78, 0x11, 0xc7, 0x0a, 0x08, 0x63, 0xf4, 0x91, 0xa3, 0x30, 0x85, 0x65, 0xe3,
-	0x22, 0x18, 0x55, 0x22, 0x43, 0xcb, 0xc6, 0xd0, 0x12, 0x7d, 0xdf, 0xf5, 0x65, 0x32, 0x2a, 0x9d,
-	0x0f, 0xe4, 0x23, 0xa4, 0x6d, 0x14, 0xec, 0x9e, 0x09, 0xa6, 0xa7, 0x64, 0xb7, 0xe5, 0xe7, 0xba,
-	0xad, 0x5c, 0x2d, 0xc4, 0x2d, 0x47, 0xf8, 0x4f, 0x34, 0xda, 0xcd, 0x7f, 0x80, 0x4c, 0x8c, 0x22,
-	0x1a, 0x24, 0xc3, 0x36, 0xe7, 0x3d, 0x87, 0xc7, 0xf0, 0x07, 0x3c, 0xb2, 0x69, 0x80, 0x8b, 0x86,
-	0xe7, 0xc3, 0x79, 0xe2, 0xbd, 0x62, 0x68, 0x90, 0xbd, 0x44, 0x36, 0x15, 0x93, 0xe6, 0x04, 0xef,
-	0x1e, 0x28, 0xce, 0x8c, 0x11, 0xe4, 0x62, 0x08, 0xf7, 0xc8, 0x51, 0x2c, 0x41, 0x35, 0x8a, 0x4a,
-	0x87, 0x5d, 0x1b, 0x39, 0x67, 0xe3, 0xa5, 0xf1, 0x72, 0x0c, 0x03, 0xf1, 0x10, 0x7d, 0xf3, 0xce,
-	0x0d, 0x1c, 0x21, 0xf3, 0xda, 0xa1, 0x6a, 0x88, 0x34, 0x43, 0xa0, 0x5c, 0x05, 0x35, 0x6a, 0x9c,
-	0x68, 0xb0, 0x3f, 0x1c, 0x74, 0x5b, 0x7d, 0xb3, 0x71, 0xd3, 0xec, 0xb6, 0x86, 0xda, 0x56, 0x88,
-	0xf4, 0x5a, 0xf5, 0xee, 0xe7, 0x25, 0xa2, 0x94, 0x3f, 0x41, 0x7a, 0xd9, 0x35, 0xd9, 0x87, 0x74,
-	0xa3, 0x3e, 0x6c, 0x5e, 0x76, 0xfa, 0x6d, 0x6d, 0x8b, 0xe4, 0x60, 0xaf, 0x3f, 0x30, 0x23, 0x40,
-	0x21, 0x00, 0xa9, 0x76, 0x6f, 0xd0, 0xa8, 0xf7, 0xb4, 0x04, 0xf9, 0x1f, 0x0e, 0x2f, 0x6e, 0x68,
-	0x7d, 0xd8, 0x19, 0xf4, 0xcd, 0xce, 0xb5, 0xd9, 0xa6, 0xad, 0xf6, 0x80, 0x76, 0xea, 0x7d, 0x2d,
-	0x59, 0x7e, 0x0d, 0xa9, 0x79, 0xf1, 0xa1, 0xc3, 0x4d, 0xff, 0xa2, 0x45, 0xcd, 0x5e, 0xe7, 0xaa,
-	0x13, 0x5e, 0x9f, 0x05, 0x18, 0xdc, 0x46, 0xb3, 0x52, 0xfb, 0xa5, 0x40, 0xe2, 0xf6, 0x94, 0x78,
-	0x90, 0x89, 0xfd, 0x43, 0xc9, 0xab, 0x8d, 0xba, 0x36, 0x3f, 0x06, 0xf9, 0xe2, 0xf3, 0x02, 0xee,
-	0x19, 0x85, 0x6f, 0x3f, 0x7f, 0x7f, 0x4f, 0x1c, 0x19, 0x07, 0xd5, 0xc7, 0xd3, 0x6a, 0x8c, 0x3e,
-	0x57, 0xca, 0x04, 0x61, 0x6f, 0xad, 0x0a, 0x72, 0xb2, 0x61, 0x17, 0x2f, 0x2e, 0xff, 0xf2, 0x39,
-	0x9a, 0x7b, 0xc6, 0xb1, 0xbc, 0xeb, 0x80, 0xe4, 0xc2, 0xbb, 0xd6, 0xc8, 0x46, 0xee, 0x0b, 0xac,
-	0xd6, 0xbe, 0x2a, 0xca, 0x28, 0x25, 0xbf, 0x6f, 0x67, 0x7f, 0x03, 0x00, 0x00, 0xff, 0xff, 0xc2,
-	0x71, 0xed, 0xc2, 0x20, 0x05, 0x00, 0x00,
+	// 697 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x7c, 0x54, 0xdd, 0x6e, 0xda, 0x48,
+	0x18, 0x8d, 0x21, 0x21, 0xf8, 0x4b, 0x00, 0x67, 0x76, 0x93, 0x78, 0x59, 0xb2, 0x8b, 0x7c, 0xc5,
+	0x22, 0x2d, 0x28, 0x44, 0xda, 0xad, 0xd2, 0x2b, 0x20, 0x2e, 0x41, 0x10, 0x90, 0x26, 0x24, 0x52,
+	0x7b, 0x63, 0x0d, 0xc9, 0x27, 0xb0, 0x82, 0x7f, 0xf0, 0x8c, 0x23, 0xe5, 0xae, 0xea, 0x2b, 0xf4,
+	0x35, 0xfa, 0x36, 0xbd, 0xee, 0x5d, 0x1f, 0xa1, 0x0f, 0x50, 0x8d, 0x01, 0x83, 0x91, 0x9a, 0x3b,
+	0x7f, 0xe7, 0x9c, 0xef, 0x8c, 0xe7, 0x1c, 0x30, 0x68, 0x93, 0x70, 0x8c, 0x81, 0xcb, 0x84, 0x17,
+	0xd4, 0xfc, 0xc0, 0x13, 0x1e, 0xc9, 0xf9, 0xe3, 0xda, 0x1a, 0x2c, 0x96, 0x26, 0x9e, 0x37, 0x99,
+	0x61, 0x9d, 0xf9, 0x76, 0x9d, 0xb9, 0xae, 0x27, 0x98, 0xb0, 0x3d, 0x97, 0x2f, 0xc4, 0x46, 0x0f,
+	0xb4, 0x0e, 0x0a, 0xca, 0x04, 0xf6, 0x6d, 0xc7, 0x16, 0x9c, 0xe2, 0x9c, 0xfc, 0x0f, 0xd9, 0x00,
+	0xe7, 0x21, 0x72, 0xc1, 0x75, 0xa5, 0x9c, 0xae, 0x1c, 0x34, 0xfe, 0xac, 0x25, 0x3c, 0x6b, 0xb1,
+	0x9e, 0xe2, 0x9c, 0xc6, 0x62, 0x63, 0x08, 0x47, 0x5b, 0x66, 0xdc, 0x27, 0x97, 0xa0, 0x06, 0xc8,
+	0x7d, 0xcf, 0xe5, 0xb8, 0xb2, 0x2b, 0xfd, 0xda, 0x8e, 0xfb, 0x74, 0x2d, 0x37, 0x7e, 0x28, 0x70,
+	0xb8, 0x79, 0x16, 0x21, 0xb0, 0xeb, 0x32, 0x07, 0x75, 0xa5, 0xac, 0x54, 0x54, 0x1a, 0x3d, 0x93,
+	0x33, 0x80, 0xd0, 0xb5, 0xe7, 0x21, 0x5a, 0x4f, 0xf8, 0xa2, 0xa7, 0x22, 0x46, 0x5d, 0x20, 0x3d,
+	0x7c, 0x91, 0x2b, 0x53, 0x5b, 0x70, 0x3d, 0x5d, 0x56, 0x2a, 0x69, 0x1a, 0x3d, 0x93, 0xdf, 0x61,
+	0x6f, 0x26, 0x2d, 0xf5, 0xdd, 0x08, 0x5c, 0x0c, 0xa4, 0x08, 0xd9, 0xc7, 0x30, 0x88, 0xe2, 0xd1,
+	0xf7, 0x22, 0x22, 0x9e, 0xc9, 0x7f, 0xa0, 0xb2, 0xd9, 0xc4, 0x0b, 0x6c, 0x31, 0x75, 0xf4, 0x4c,
+	0x59, 0xa9, 0xe4, 0x1b, 0xfa, 0xd6, 0x2d, 0x9a, 0x2b, 0x9e, 0xae, 0xa5, 0xe4, 0x02, 0xb2, 0x63,
+	0x9c, 0xb2, 0x67, 0xdb, 0x0b, 0xf4, 0xfd, 0x68, 0xed, 0x74, 0x6b, 0xad, 0xb5, 0xa4, 0x69, 0x2c,
+	0x34, 0xbe, 0xa4, 0x20, 0x97, 0xc8, 0x84, 0xfc, 0x0b, 0x19, 0x2e, 0x98, 0x08, 0x79, 0x74, 0xf3,
+	0x7c, 0xe3, 0x78, 0xcb, 0xe4, 0x36, 0x22, 0xe9, 0x52, 0xb4, 0xbe, 0x5f, 0x6a, 0xf3, 0x7e, 0x25,
+	0xd9, 0x84, 0xc3, 0x6c, 0xd7, 0x76, 0x27, 0xcb, 0x38, 0xd6, 0x80, 0x8c, 0x31, 0x40, 0x8e, 0xc2,
+	0x12, 0xb6, 0x83, 0xcb, 0x60, 0xd4, 0x08, 0x19, 0xd9, 0x0e, 0x4a, 0x4b, 0x0c, 0x02, 0x2f, 0x88,
+	0x92, 0x51, 0xe9, 0x62, 0x20, 0xef, 0x20, 0xeb, 0xa0, 0x60, 0x8f, 0x4c, 0x30, 0x3d, 0x13, 0x75,
+	0x5b, 0x7d, 0xad, 0xdb, 0xda, 0xcd, 0x52, 0x6c, 0xba, 0x22, 0x78, 0xa1, 0xf1, 0x6e, 0xf1, 0x2d,
+	0xe4, 0x12, 0x14, 0xd1, 0x20, 0x2d, 0xdb, 0x5c, 0xf4, 0x2c, 0x1f, 0xe5, 0x0b, 0x3c, 0xb3, 0x59,
+	0x88, 0xcb, 0x86, 0x17, 0xc3, 0x65, 0xea, 0x8d, 0x62, 0x68, 0x90, 0xbf, 0x46, 0x36, 0x13, 0xd3,
+	0xf6, 0x14, 0x1f, 0x9e, 0x28, 0xce, 0x8d, 0x31, 0x14, 0x12, 0x08, 0xf7, 0xc9, 0x49, 0x22, 0x41,
+	0x35, 0x8e, 0x4a, 0x87, 0x7d, 0x07, 0x39, 0x67, 0x93, 0x95, 0xf1, 0x6a, 0x94, 0x81, 0xf8, 0x88,
+	0x81, 0xf5, 0xe0, 0x85, 0xae, 0x88, 0xf2, 0xda, 0xa3, 0xaa, 0x44, 0xda, 0x12, 0xa8, 0xd6, 0x41,
+	0x8d, 0x1b, 0x27, 0x1a, 0x1c, 0x8e, 0x86, 0x3d, 0x73, 0x60, 0xb5, 0xee, 0xda, 0x3d, 0x73, 0xa4,
+	0xed, 0x48, 0xa4, 0x6f, 0x36, 0x7b, 0xef, 0x57, 0x88, 0x52, 0x45, 0xc8, 0xae, 0xba, 0x26, 0x87,
+	0x90, 0x6d, 0x35, 0x47, 0xed, 0xeb, 0xee, 0xa0, 0xa3, 0xed, 0x90, 0x02, 0x1c, 0x0c, 0x86, 0x56,
+	0x0c, 0x28, 0x04, 0x20, 0xd3, 0xe9, 0x0f, 0x5b, 0xcd, 0xbe, 0x96, 0x22, 0x7f, 0xc0, 0xf1, 0xd5,
+	0x1d, 0x6d, 0x8e, 0xba, 0xc3, 0x81, 0xd5, 0xbd, 0xb5, 0x3a, 0xd4, 0xec, 0x0c, 0x69, 0xb7, 0x39,
+	0xd0, 0x76, 0xc9, 0x6f, 0x50, 0xa0, 0xe6, 0xad, 0x39, 0xb2, 0xa8, 0x79, 0xd3, 0xec, 0x0e, 0xe4,
+	0x6e, 0xb6, 0xfa, 0x0f, 0x64, 0x16, 0xbf, 0x06, 0x69, 0x7b, 0x37, 0xb8, 0x32, 0xa9, 0xd5, 0xef,
+	0xde, 0x74, 0xe5, 0x3b, 0xe5, 0x01, 0x86, 0xf7, 0xf1, 0xac, 0x34, 0xbe, 0x29, 0x90, 0xba, 0x3f,
+	0x27, 0x3e, 0xe4, 0x12, 0x7f, 0x5b, 0xf2, 0xf7, 0x56, 0x87, 0xdb, 0x5f, 0x88, 0x62, 0xf9, 0x75,
+	0x01, 0xf7, 0x8d, 0xd2, 0xa7, 0xaf, 0xdf, 0x3f, 0xa7, 0x4e, 0x8c, 0xa3, 0xfa, 0xf3, 0x79, 0x3d,
+	0x41, 0x5f, 0x2a, 0x55, 0x82, 0x70, 0xb0, 0xd1, 0x0f, 0x39, 0xdb, 0xb2, 0x4b, 0xb6, 0x59, 0xfc,
+	0xeb, 0x35, 0x9a, 0xfb, 0xc6, 0x69, 0x74, 0xd6, 0x11, 0x29, 0xc8, 0xb3, 0x36, 0xc8, 0x56, 0xe1,
+	0x03, 0xac, 0xd7, 0x3e, 0x2a, 0xca, 0x38, 0x13, 0x7d, 0xf4, 0x2e, 0x7e, 0x06, 0x00, 0x00, 0xff,
+	0xff, 0x99, 0xdd, 0x6d, 0x83, 0x35, 0x05, 0x00, 0x00,
 }
